# keck

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  install.yaml  rust-toolchain.toml
.github/workflows/: ci.yml
docs/: openshift-deployment.md  operations-runbook.md  power-attribution.md
docs/superpowers/plans/: 2026-05-12-application-grouping.md
docs/superpowers/specs/: 2026-05-12-application-grouping-design.md
keck-agent/: Cargo.toml  Dockerfile  build.rs
keck-agent/src/: main.rs  perf_counters.rs
keck-agent/src/attribution/: engine.rs  mod.rs  model.rs  tuner.rs  types.rs
keck-agent/src/ebpf/: maps.rs  mod.rs  perf.rs
keck-agent/src/hardware/: collector.rs  gpu.rs  hwmon.rs  mod.rs  platform.rs  rapl.rs
keck-agent/src/k8s/: mod.rs  workload.rs
keck-agent/src/output/: mod.rs  prometheus.rs  query.rs
keck-agent/src/store/: mod.rs
keck-common/: Cargo.toml
keck-common/src/: lib.rs
keck-controller/: Cargo.toml  Dockerfile
keck-controller/src/: application.rs  kepler_scraper.rs  main.rs  metrics.rs
keck-controller/src/aggregator/: mod.rs
keck-controller/src/api/: mod.rs
keck-controller/src/carbon/: mod.rs
keck-controller/src/scheduler/: mod.rs
keck-ebpf/: Cargo.toml
keck-ebpf/src/: main.rs
keck-fleet/: Cargo.toml
keck-fleet/src/: main.rs
keck-fleet/src/api/: mod.rs
keck-fleet/src/policy/: mod.rs
keck-fleet/src/registry/: mod.rs
keck-fleet/src/reporting/: mod.rs
keck-operator/: Dockerfile  Makefile  PROJECT  bundle.Dockerfile  go.mod
keck-operator/api/v1alpha1/: groupversion_info.go  types.go  zz_generated.deepcopy.go
keck-operator/bundle/manifests/: keck-operator.clusterserviceversion.yaml  keck.io_keckclusters.yaml
keck-operator/bundle/metadata/: annotations.yaml
keck-operator/cmd/: main.go
keck-operator/config/crd/bases/: keck.io_keckapplications.yaml  keck.io_keckclusters.yaml  keck.io_powerbudgets.yaml  keck.io_powerprofiles.yaml
keck-operator/config/manager/: manager.yaml
keck-operator/config/olm/: catalog.Dockerfile  catalog.yaml  catalogsource.yaml  install-via-ui.sh  subscription.yaml
keck-operator/config/prometheus/: prometheusrule.yaml
keck-operator/config/rbac/: role.yaml
keck-operator/config/samples/: keckapplication.yaml  keckcluster.yaml  powerbudget.yaml  powerprofile.yaml  redfish-credentials.yaml
keck-operator/controllers/: keckcluster_controller.go  keckcluster_controller_test.go  powerbudget_controller.go  powerbudget_controller_test.go
keck-ui/: Dockerfile  console-extensions.json  index.html  package.json  tsconfig.json  vite.config.ts  webpack.config.js  webpack.config.ts
keck-ui/openshift/: console-plugin.yaml  enable-plugin.sh
keck-ui/src/: App.css  App.tsx  main.tsx
keck-ui/src/api/: client.ts
keck-ui/src/components/: PowerManagementPage.tsx
keck-ui/src/components/application/: ApplicationsView.tsx
keck-ui/src/components/cluster/: ClusterOverview.tsx
keck-ui/src/components/common/: ErrorBadge.tsx  StatCard.tsx
keck-ui/src/components/fleet/: FleetOverview.tsx
keck-ui/src/components/kepler/: KeplerComparisonView.tsx
keck-ui/src/components/namespace/: NamespaceView.tsx
keck-ui/src/components/node/: NodesView.tsx
keck-ui/src/components/pod/: PodView.tsx
keck-ui/src/hooks/: useKeckData.ts
keck-ui/src/types/: power.ts
keck-ui/src/utils/: api.ts  format.ts  usePolling.ts
scripts/: Dockerfile.calibrate  calibrate.py  release.sh
