[package]
name = "keck-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keck-common = { path = "../keck-common", features = ["userspace"] }
log.workspace = true
env_logger = "0.11"
thiserror.workspace = true
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
