[package]
name = "keck-agent"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
keck-common = { path = "../keck-common", features = ["userspace"] }
aya = "0.13"
aya-log = "0.2"
log.workspace = true
env_logger = "0.11"
thiserror.workspace = true
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }

[build-dependencies]
aya-build = "0.1"
