[package]
name = "keck-controller"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
env_logger = "0.11"
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
