[package]
name = "keck-controller"
version = "0.2.0"
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
env_logger = "0.11"
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
axum = "0.7"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
kube = { version = "0.98", features = ["client", "rustls-tls"], default-features = false }
k8s-openapi = { version = "0.24", features = ["v1_32"] }

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }
