[package]
name = "keck-fleet"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
log.workspace = true
env_logger = "0.11"
thiserror.workspace = true
tokio = { version = "1", features = ["full"] }
tonic = "0.12"
prost = "0.13"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
